# code-pulse

./: .gitignore  README.md  codepulse.sh  pyproject.toml
codepulse/: __init__.py  __main__.py  app.py  cli.py  config.py  menubar.py  server.py
codepulse/agents/: discussion.py  pool.py  subagent.py
codepulse/api/: claude_client.py  models.py
codepulse/git/: parser.py  snapshot.py  tracker.py
codepulse/heatmap/: aggregator.py  models.py
codepulse/ncb/: __init__.py  client.py  sync.py
codepulse/process/: __init__.py  detector.py  models.py  runner.py
codepulse/session/: exporter.py  manager.py  models.py
codepulse/styles/: app.tcss
codepulse/utils/: colors.py  paths.py  time_utils.py
codepulse/widgets/: bottom_drawer.py  chat_panel.py  diff_entry.py  diff_panel.py  heatmap_panel.py  launcher.py  process_manager.py  prompt_input.py  quick_actions.py  status_bar.py  tool_palette.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  types.ts
frontend/src/components/: Heartbeat.css  Heartbeat.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/panels/: ActionsPanel.css  ActionsPanel.tsx  ArsenalPanel.css  ArsenalPanel.tsx  ChatPanel.css  ChatPanel.tsx  NextStepsPanel.css  NextStepsPanel.tsx  OrchestrationPanel.css  OrchestrationPanel.tsx  ResultsPanel.css  ResultsPanel.tsx
frontend/src/styles/: app.css  global.css
scripts/: install_menubar.sh
tests/: test_aggregator.py  test_parser.py  test_pool.py  test_server.py  test_session.py
