[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codepulse"
version = "0.1.0"
description = "Claude Code TUI with codebase visualization and rotating subagents"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.89.0",
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "unidiff>=0.7.5",
    "gitpython>=3.1.40",
    "aiofiles>=23.0.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
codepulse = "codepulse.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "textual-dev>=0.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
