[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codepulse"
version = "0.2.0"
description = "Local web-based visual studio for solo agentic programming with Claude Code"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "unidiff>=0.7.5",
    "gitpython>=3.1.40",
    "aiofiles>=23.0.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
codepulse = "codepulse.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27.0",
]
tui = [
    "textual>=0.89.0",
    "textual-dev>=0.1.0",
]
menubar = [
    "rumps>=0.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
